--- a/shopping/shopping/src/main/resources/templates/Admin/UserList.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/UserList.html
@@ -11,7 +11,7 @@
 
 <section>
     <form>
-    <table>
+    <table style="width:80%; margin:100px auto">
         <tr>
             <td colspan="5" class="users_title">
                 <h2>User List</h2>
@@ -39,7 +39,7 @@
 
         <tr>
             <td colspan="5" class="td_btn"><br><br>
-                <button type="submit" formmethod="post" formaction="/admin/Users_Delete">삭제</button>
+                <button type="submit" formmethod="post" class="btn btn-secondary" formaction="/admin/Users_Delete">삭제</button>
                 <br><br>
             </td>
         </tr>
