--- a/shopping/shopping/src/main/resources/templates/Admin/Items/ItemsModify.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/Items/ItemsModify.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<meta charset="UTF-8">
+
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <title>Category</title>
+</head>
 
 <th:block th:replace="~{../static/css/home/top.css}"></th:block>
 <th:block th:replace="~{../static/css/Items/ItemModify.css}"></th:block>
@@ -11,97 +16,125 @@
 
 <section>
     <form action="/admin/ItemsModify_proc" method="post" enctype="multipart/form-data">
-        <table>
+        <table style="margin:70px 500px; text-align:center; width:50%;">
             <tr>
-                <td colspan="10" class="col_td1">
-                    <h2>상품 등록</h2>
-                </td>
-            </tr>
-
-            <tr>
-                <td class="td1">분류:
+                <td colspan="3">
+                    <span style="font-weight:bold; font-size:40px;">Modify</span>
                     <input type="hidden" name="idx" th:value="${item.idx}">
                     <input type="hidden" name="regdate" th:value="${item.regdate}">
                 </td>
-                <td class="td2">
-                    <select name="category1" id="category1" onchange="set_category2(this.value)">
-                        <option value="none">선택</option>
-                        <th:block th:each="first : ${first}">
-                            <option th:text="${first.category_name}"
-                                    th:value="${first.code}"
-                                    th:selected="${first.code} == ${#strings.substring(code, 0, 2)}">
-                            </option>
-                        </th:block>
-                    </select>
+            </tr>
 
-                    <select name="category2" id="category2" onchange="set_category3(this.value)">
-                        <option value="none">선택</option>
-                        <th:block th:each="category, categoryStat : ${category}">
-                            <option th:if="${#strings.length(category.category) == 4}"
-                                    th:text="${category.name}"
-                                    th:value="${category.category}"
-                                    th:selected="${category.category} == ${#strings.substring(code, 0, 4)}">
-                            </option>
-                        </th:block>
-                    </select>
-
-                    <select name="category3" id="category3">
-                        <option value="none">선택</option>
-                        <th:block th:each="category, categoryStat : ${category}">
-                            <option th:if="${#strings.length(category.category) == 6}"
-                                    th:text="${category.name}"
-                                    th:value="${category.category}"
-                                    th:selected="${category.category} == ${code}">
-                            </option>
-                        </th:block>
-                    </select>
+            <tr>
+                <td class="td1">
+                    <div class="input-group mb-3">
+                        <label class="input-group-text" for="category1" style="width:100px;">카테고리1</label>
+                        <select class="form-select" name="category1" id="category1" onchange="set_category2(this.value)" style="width:100px;">
+                            <option value="none" selected>선택</option>
+                            <th:block th:each="first : ${first}">
+                                <option th:text="${first.category_name}"
+                                        th:value="${first.code}"
+                                        th:selected="${first.code} == ${#strings.substring(code, 0, 2)}">
+                                </option>
+                            </th:block>
+                        </select>
+                    </div>
+                </td>
+                <td class="td1">
+                    <div class="input-group mb-3">
+                        <label class="input-group-text" for="category2" style="width:100px;">카테고리2</label>
+                        <select class="form-select" name="category2" id="category2" onchange="set_category3(this.value)" style="width:100px;">
+                            <option value="none" selected>선택</option>
+                            <th:block th:each="category, categoryStat : ${category}">
+                                <option th:if="${#strings.length(category.category) == 4}"
+                                        th:text="${category.name}"
+                                        th:value="${category.category}"
+                                        th:selected="${category.category} == ${#strings.substring(code, 0, 4)}">
+                                </option>
+                            </th:block>
+                        </select>
+                    </div>
+                </td>
+                <td class="td1">
+                    <div class="input-group mb-3">
+                        <label class="input-group-text" for="category3" style="width:100px;">카테고리3</label>
+                        <select class="form-select" name="category3" id="category3" style="width:100px;">
+                            <option value="none" selected>선택</option>
+                            <th:block th:each="category, categoryStat : ${category}">
+                                <option th:if="${#strings.length(category.category) == 6}"
+                                        th:text="${category.name}"
+                                        th:value="${category.category}"
+                                        th:selected="${category.category} == ${code}">
+                                </option>
+                            </th:block>
+                        </select>
+                    </div>
                 </td>
             </tr>
 
             <tr>
-                <td class="td1"><br>제품명</td>
-                <td class="td2"><br>
-                    <input type="text" name="item" th:value="${item.item}">
+                <td class="td1" colspan="3">
+                    <div class="input-group flex-nowrap">
+                        <span class="input-group-text" id="addon-wrapping1" style="width:100px;">제품명</span>
+                        <input type="text" name="item" class="form-control" aria-label="item" aria-describedby="addon-wrapping" th:value="${item.item}">
+                    </div>
                 </td>
             </tr>
 
             <tr>
-                <td class="td1"><br>재고</td>
-                <td class="td2"><br>
-                    <input type="text" name="inventory" id="inventory" class="item_info" onkeyup="comma1(this.value)" th:value="${item.inventory}">EA
+                <td class="td1" colspan="3">
+                    <div class="input-group flex-nowrap">
+                        <span class="input-group-text" id="addon-wrapping2" style="width:100px;">재고</span>
+                        <input type="text" name="inventory" class="form-control" aria-label="inventory" aria-describedby="addon-wrapping" th:value="${item.inventory}">
+                    </div>
                 </td>
             </tr>
 
             <tr>
-                <td class="td1"><br>가격</td>
-                <td class="td2"><br>
-                    <input type="text" name="price" id="price" class="item_info" onkeyup="comma2(this.value)" th:value="${item.price}">원
+                <td class="td1" colspan="3">
+                    <div class="input-group flex-nowrap">
+                        <span class="input-group-text" id="addon-wrapping3" style="width:100px;">가격</span>
+                        <input type="text" name="price" class="form-control" aria-label="price" aria-describedby="addon-wrapping" th:value="${item.price}">
+                    </div>
                 </td>
             </tr>
 
             <tr>
-                <td class="td1"><br>제품설명</td>
-                <td class="td2"><br><textarea name="content" class="item_content">[[${item.content}]]</textarea></td>
+                <td class="td1" colspan="3">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">제품설명</span>
+                        <textarea name="content" class="form-control" aria-label="With textarea" style="resize:none; height:200px;">[[${item.content}]]</textarea>
+                    </div>
+                </td>
             </tr>
 
-            <tr>
-                <td class="td1"><br>등록된 사진</td>
-                <td class="td2"><br>
-                    <th:block th:each="list, listStat : ${item.itemsFileEntities}">
-                        <input type="checkbox" name="image_check1" th:id="${listStat.count}" th:value="${list.path}" onchange="change_value(this.id, this.value)">
-                        <input type="checkbox" name="check" th:id="'image_checked'+${listStat.count}" value="unchecked" checked style="display:none;">
-                        <span th:text="${list.origin}" th:filename="${list.path}" onclick="image_view(this.getAttribute('filename'))"></span>
-                        <input type="file" name="files"><br>
-                    </th:block>
+            <tr th:each="list, listStat : ${item.path}">
+                <td>
+                    <div class="input-group">
+                        <span class="input-group-text" th:text="'사진'+${listStat.count}" style="width:100px;"></span>
+                        <div class="form-control" style="text-align:left;">
+                            <input type="checkbox" name="image_check1" th:id="${listStat.count}" th:value="${list}" onchange="change_value(this.id, this.value)">
+                            <input type="checkbox" name="check" th:id="'image_checked'+${listStat.count}" value="unchecked" checked style="display:none;">
+                            <span th:if="${listStat.index == 0}" th:filename="${list}" onclick="image_view(this.getAttribute('filename'))" style="cursor:pointer">
+                                <b>(Thumbnail)</b>[[${#strings.arraySplit(list,'_')[1]}]]
+                            </span>
+                            <span th:if="${listStat.index != 0}" th:filename="${list}" onclick="image_view(this.getAttribute('filename'))" style="cursor:pointer">
+                                [[${#strings.arraySplit(list,'_')[1]}]]
+                            </span>
+                        </div>
+                    </div>
+                </td>
+                <td colspan="2">
+                    <div class="input-group">
+                        <!--<label for="formFile" class="form-label">Default file input example</label>-->
+                        <input class="form-control" type="file" id="formFile" name="files">
+                    </div>
                 </td>
             </tr>
 
             <tr>
-                <td colspan="10" class="col_td2"><br>
-                    <a th:href="@{/admin/ItemList}">
-                        <input type="button" value="뒤로가기" class="back_btn">
-                    </a>&emsp;
-                    <input type="submit" value="수정" class="item_btn">
+                <td colspan="3">
+                    <input type="submit" value="수정"  class="btn btn-secondary" style="width:100%;">
                 </td>
             </tr>
         </table>
@@ -111,6 +144,7 @@
 <th:block th:replace="~{../static/inc/bottom.html}"></th:block>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script th:inline="javascript" src="/js/Items/ItemModify.js"></script>
 </html>
 
