--- a/shopping/shopping/src/main/resources/templates/Admin/UserView.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/UserView.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<meta charset="UTF-8">
+
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <title>Category</title>
+</head>
 
 <th:block th:replace="~{../static/css/home/top.css}"></th:block>
-<th:block th:replace="~{../static/css/UserList.css}"></th:block>
 <th:block th:replace="~{../static/css/home/bottom.css}"></th:block>
 
 <body>
@@ -11,66 +15,102 @@
 
 <section>
     <form>
-        <table>
+        <table style="width:40%; margin:100px auto">
             <tr>
-                <td colspan="2" class="view_title">
-                    <h2>User View</h2>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold; font-size:40px;">User View</span>
                     <input type="hidden" name="idx" th:value="${user.idx}">
                     <input type="hidden" name="regdate" th:value="${user.regdate}">
+                    <br>
                 </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">이름:</td>
-                <td>&emsp;[[${user.name}]]</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">이름</span>
+                        <span class="form-control">[[${user.name}]]</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">아이디:</td>
-                <td>&emsp;[[${user.userid}]]</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">아이디</span>
+                        <span class="form-control">[[${user.userid}]]</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">비밀번호:</td>
-                <td>&emsp;[[${user.password}]]</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">비밀번호</span>
+                        <span class="form-control">&emsp;-</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">주민번호:</td>
-                <td>&emsp;[[${user.f_rrn}]]-[[${user.l_rrn}]]******</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">주민번호</span>
+                        <span class="form-control">[[${user.f_rrn}]]-[[${user.l_rrn}]]******</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">연락처:</td>
-                <td>&emsp;[[${user.hp}]]</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">연락처</span>
+                        <span class="form-control">[[${user.hp}]]</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">주소:</td>
-                <td>&emsp;[[${user.add1}]] / [[${user.add2}]] / [[${user.add3}]]</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">주소</span>
+                        <span class="form-control">[[${user.add1}]] / [[${user.add2}]] / [[${user.add3}]]</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">이메일:</td>
-                <td>&emsp;[[${user.mail}]] [[${user.web}]]</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">이메일</span>
+                        <span class="form-control">[[${user.mail}]] [[${user.web}]]</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">가입일:</td>
-                <td>&emsp;[[${user.regdate}]]</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">가입일</span>
+                        <span class="form-control">[[${user.regdate}]]</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="user_view_td1">잔액:</td>
-                <td>&emsp;[[${user.cash}]]</td>
+                <td class="td1">
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:100px;">잔액</span>
+                        <span class="form-control">[[${user.cash}]]</span>
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td colspan="2" class="view_btn"><br><br>
-                    <a th:href="@{/admin/UserList}"><input type="button" class="user_view_btn" value="뒤로"></a>&emsp;
-                    <button type="submit" formaction="/admin/UserModify" formmethod="post" class="user_view_btn">수정</button>&emsp;
-                    <button type="submit" formaction="/admin/UserDelete" formmethod="post" class="user_view_btn">삭제</button>&emsp;
-                    <br><br>
+                <td colspan="2" style="text-align:right;">
+                    <br>
+                    <a th:href="@{/admin/UserList}"><input type="button" class="btn btn-secondary" value="뒤로"></a>&emsp;
+                    <button type="submit" formaction="/admin/UserDelete" formmethod="post" class="btn btn-secondary">삭제</button>&emsp;
                 </td>
             </tr>
         </table>
@@ -78,5 +118,5 @@
 </section>
 <th:block th:replace="~{../static/inc/bottom.html}"></th:block>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
