--- a/shopping/shopping/src/main/resources/templates/User/Community/CommunityRegister.html
+++ b/shopping/shopping/src/main/resources/templates/User/Community/CommunityRegister.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<meta charset="UTF-8">
+
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <title>Category</title>
+</head>
 
 <th:block th:replace="~{../static/css/home/top.css}"></th:block>
 <th:block th:replace="~{../static/css/Community/CommunityRegister.css}"></th:block>
@@ -9,27 +14,61 @@
 <th:block th:replace="~{../static/inc/top.html}"></th:block>
 
 <section>
-    <form method="post" action="/admin/CommunityRegister_proc" enctype="multipart/form-data">
-        <table class="register_table">
+    <form method="post" action="/main/CommunityRegister_proc" enctype="multipart/form-data">
+        <table style="margin:100px 500px; width:50%;">
+
             <tr>
-                <td class="register_subject" colspan="2"><h2>Board Register</h2></td>
+                <td style="text-align:center;">
+                    <h2>Board Register</h2>
+                </td>
             </tr>
 
             <tr>
-                <td class="register_td1"><b>작성자</b></td>
-                <td class="register_td2">&emsp;[[${name}]]</td>
+                <td>
+                    <ul class="list-group">
+                        <div class="input-group flex-nowrap">
+                            <span class="input-group-text" id="addon-wrapping1" style="width:90px;">작성자</span>
+                            <span class="form-control" th:text="${name}"></span>
+                        </div>
+                    </ul>
+                </td>
             </tr>
 
             <tr>
-                <td class="register_td1"><b>제목</b></td>
-                <td class="register_td2"><input type="text" name="title" class="register_title"></td>
+                <td>
+                    <div class="input-group flex-nowrap">
+                        <span class="input-group-text" id="addon-wrapping2" style="width:90px;">제목</span>
+                        <input type="text" name="title" class="form-control">
+                    </div>
+                </td>
             </tr>
 
             <tr>
-                <td class="register_td1"><b>내용</b></td>
-                <td class="register_td2"><textarea name="content" class="content"></textarea></td>
+                <td>
+                    <div class="input-group">
+                        <span class="input-group-text" style="width:90px;">내용</span>
+                        <textarea name="content" class="form-control" aria-label="With textarea" style="resize:none; height:200px;"></textarea>
+                    </div>
+                </td>
             </tr>
 
+            <tr>
+                <td>
+                    <div class="input-group">
+                        <!--<label for="formFile" class="form-label">Default file input example</label>-->
+                        <input class="form-control" type="file" id="formFile1" name="files">
+                    </div>
+                    <div class="input-group">
+                        <!--<label for="formFile" class="form-label">Default file input example</label>-->
+                        <input class="form-control" type="file" id="formFile2" name="files">
+                    </div>
+                    <div class="input-group">
+                        <!--<label for="formFile" class="form-label">Default file input example</label>-->
+                        <input class="form-control" type="file" id="formFile3" name="files">
+                    </div>
+                </td>
+            </tr>
+            <!--
             <tr>
                 <td class="register_td1"><b>첨부파일</b></td>
                 <td class="register_td2">
@@ -46,11 +85,11 @@
                     <img class="Preview_image" id="image3" onclick="change_image3()">
                 </td>
             </tr>
-
+            -->
             <tr>
-                <td class="register_btn_td" colspan="2">
-                    <input type="reset" value="다시쓰기" class="register_btn">
-                    <input type="submit" value="작성" class="register_btn">
+                <td class="register_btn_td">
+                    <input type="reset" value="다시쓰기" class="btn btn-secondary">
+                    <input type="submit" value="작성" class="btn btn-secondary">
                 </td>
             </tr>
         </table>
@@ -59,6 +98,7 @@
 <th:block th:replace="~{../static/inc/bottom.html}"></th:block>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script th:inline="javascript" src="/js/Community/CommunityRegister.js"></script>
 </html>
 
