--- a/shopping/shopping/src/main/resources/templates/User/Items/OrderCheck.html
+++ b/shopping/shopping/src/main/resources/templates/User/Items/OrderCheck.html
@@ -30,7 +30,9 @@
                 <table style="width:50%; margin:100px 500px;">
                     <tr>
                         <td>
-                            <span style="font-weight:bold; font-size:40px;">Order Check</span>
+                            <div style="text-align:center;">
+                                <h2>Order Check</h2>
+                            </div>
                         </td>
                     </tr>
                     <tr>
@@ -77,7 +79,9 @@
                 <table style="width:50%; margin:100px 500px;">
                     <tr>
                         <td>
-                            <span style="font-weight:bold; font-size:40px;">Delivery Check</span>
+                            <div style="text-align:center;">
+                                <h2>Delivery Check</h2>
+                            </div>
                         </td>
                     </tr>
                     <tr>
